syntax = "proto3";

message RtcConfiguration {
  repeated string ice_servers = 1;
}

message RtcSessionDescriptionInit {
  string sdp = 1;
  RtcSessionDescriptionType type = 2;
}

enum RtcSessionDescriptionType {
  RTC_SESSION_DESCRIPTION_TYPE_UNKNOWN = 0;
  RTC_SESSION_DESCRIPTION_TYPE_OFFER = 1;
  RTC_SESSION_DESCRIPTION_TYPE_ANSWER = 2;
  RTC_SESSION_DESCRIPTION_TYPE_PRANSWER = 3;
  RTC_SESSION_DESCRIPTION_TYPE_ROLLBACK = 4;
}

message RtcIceCandidate {
  string candidate = 1;
  string sdp_mid = 2;
  int32 sdp_m_line_index = 3;
  string username_fragment = 4;
}

message OfferEvent {
  string from_id = 1;
  RtcSessionDescriptionInit offer = 2;
}

message AnswerEvent {
  string from_id = 1;
  RtcSessionDescriptionInit answer = 2;
}

message IceCandidateEvent {
  string from_id = 1;
  RtcIceCandidate candidate = 2;
}

message GetInformationRequest {
  string message_id = 1;
}

message GetInformationResponse {
  string message_id = 1;
  string user_id = 2;
  RtcConfiguration rtc_configuration = 3;
}

message SendOfferRequest {
  string to_id = 1;
  RtcSessionDescriptionInit offer = 2;
}

message SendAnswerRequest {
  string to_id = 1;
  RtcSessionDescriptionInit answer = 2;
}

message SendIceCandidateRequest {
  string to_id = 1;
  RtcIceCandidate candidate = 2;
}
